Kube_YAML/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  namespace: default
spec:
  rules:
  - http:
      paths:
        - path: /api/message
          backend:
            serviceName: backend
            servicePort: 8080
        - path: /api/employees
          backend:
            serviceName: backend
            servicePort: 8080
